Adds session support, authentication, users list--
* Replaces pg-promise with node-postgres.
* Adds additional fields like online_status, registered, etc.
* Adds basic, working authentication (vue-authenticate).
* Adds list of users.
* Updates format for message timestamps.
* Style and layout updates.

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 html, body, #app {
     height: 100%;
     margin: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 
