Big huge refactor
- Big refactor, a lot of organizational changes
- Pull out a lot of code from the monolithic <ChatApp>
- Break up a lot of code into many smaller components.

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -6,3 +6,13 @@ html, body, #app {
     font-family: 'Open Sans', sans-serif;
 }
 
+.panel-section {
+    background-color: #3D3657;
+}
+.panel-body {
+    padding: 1em;
+}
+.panel-header {
+    padding: 1em;
+    background-color: black;
+}
